# Brain4me

./: .env  .gitignore  AGENTS.md  app.py  pyproject.toml  pytest.ini
docs/: 00-visao-geral.md  01-benchmark-opensource.md  02-conceitos-fundamentais.md  03-ontologia-base.md  04-arquitetura-mvp.md  05-modelo-de-dados.md  06-fluxo-de-ingestao.md  07-fluxo-de-consulta.md  08-memoria-e-contexto.md  09-agentes-e-decisoes.md  10-roadmap.md  11-prompt-mestre-codex.md  12-prompt-mestre-codex-v2.md  13-relatorio-avaliacao-tecnica-v1.md  14-Prompt-Fase-2.md  15-relatorio-correcoes-fase2.md  16-relatorio-tecnico-fase3.md  17-relatorio-tecnico-fase4.md  18-relatorio-tecnico-fase5.md  19-relatorio-tecnico-fase6.md  README.md  relatorio-avaliacao-tecnica-v2.md
docs/Code Quality/: audit-fase1.md  audit-fase2.md  audit-fase3.md  plano-correcao-prism-scan.md  prism-scan-invariantes.md
docs/architecture/: adr-template.md  decisoes-arquiteturais.md  diagramas.md
docs/ontology/: entidades.md  exemplos.md  regras.md  relacoes.md
docs/plans/: phase-multimodal-viz-electron.md  phase1-document-formats-prompt.md  phase2-graph-viz-prompt.md  phase3-electron-prompt.md
docs/prompts/: prompt-analise-decisao.md  prompt-desenvolvimento.md  prompt-geracao-ontologia.md  (+3 more)
electron/: README.md  index.html  main.js  package.json  preload.js  renderer.js  styles.css
tests/: __init__.py  conftest.py  test_cli.py  test_converters.py  test_extractor.py  test_ingest.py  test_ingest_file.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_query.py  test_schema.py
(+38 files in other folders)
